--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,9 @@
 [submodule "bundle/airline"]
 	path = bundle/airline
 	url = https://github.com/vim-airline/vim-airline
+[submodule "bundle/textobj-user"]
+	path = bundle/textobj-user
+	url = git@github.com:kana/vim-textobj-user.git
+[submodule "bundle/bufkill"]
+	path = bundle/bufkill
+	url = git@github.com:qpkorr/vim-bufkill.git
