add silver searcher

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/bufkill"]
 	path = bundle/bufkill
 	url = git@github.com:qpkorr/vim-bufkill.git
+[submodule "bundle/ag"]
+	path = bundle/ag
+	url = git@github.com:rking/ag.vim.git
